PRL-4212 - moved hearings data population to mid event callbacks from about to start